Fixed index scrollbar, added download for each article

--- a/main/static/src/css/_partials/article-view.less
+++ b/main/static/src/css/_partials/article-view.less
@@ -15,6 +15,7 @@
 }
 
 .social-container{
+
     height: 40px;
     margin: 10px 0 30px 0;
     &>div {
@@ -327,6 +328,7 @@
 }
 .article-footer {
 	position: relative;
+	width: 100%;
 	height: 40px;
 	margin-bottom: 100px;
 	clear: both;
