--- a/main/static/src/css/_partials/index.less
+++ b/main/static/src/css/_partials/index.less
@@ -73,6 +73,7 @@
 	float: left;
 	margin-right: 6% !important;
 	position: relative;
+	min-height: 60vh;
  	@media screen and (max-width: @md){
 	    margin: 0;
 	    float: none;
